[package]
name = "firezone-connlib"
version = "0.1.0"
edition = "2021"

# Apple tunnel dependencies
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
boringtun = { git = "https://github.com/cloudflare/boringtun", rev = "be08af9", features = ["device"] }

# Linux tunnel dependencies
[target.'cfg(target_os = "linux")'.dependencies]
boringtun = { git = "https://github.com/cloudflare/boringtun", rev = "be08af9", features = ["device"] }

# Android tunnel dependencies
[target.'cfg(target_os = "android")'.dependencies]
boringtun = { git = "https://github.com/cloudflare/boringtun", rev = "be08af9", features = ["jni-bindings"] }
android_logger = "0.13"
log = "0.4.14"

# Windows tunnel dependencies
[target.'cfg(target_os = "windows")'.dependencies]
boringtun = { git = "https://github.com/cloudflare/boringtun", rev = "be08af9", features = [] }
wintun = "0.2.1"
