[package]
name = "connlib-android"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO: boringtun seems to be missing the `static_secrets` feature for this crate.
# This causes a compile error "StaticSecret not found in root". So include it here.
x25519-dalek = { features = ["reusable_secrets", "static_secrets"] }
jni = { version = "0.21.1", features = ["invocation"] }
firezone-connlib = { path = "../" }

[lib]
path = "src/lib.rs"
name = "connlib"
crate-type = ["cdylib"]
