[package]
name = "connlib-apple"
version = "0.1.6"
edition = "2021"

build = "build.rs"

[build-dependencies]
swift-bridge-build = { path = "../../../swift-bridge/crates/swift-bridge-build" }

[dependencies]
libc = "0.2"
swift-bridge = { path = "../../../swift-bridge" }
firezone-client-connlib = { path = "../../libs/client" }

[lib]
name = "connlib"
crate-type = ["staticlib"]
