[package]
name = "connlib-apple"
version = "0.1.6"
edition = "2021"

build = "build.rs"

[build-dependencies]
swift-bridge-build = { git = "https://github.com/conectado/swift-bridge.git" branch = "fix-already-declared" }

[dependencies]
libc = "0.2"
swift-bridge = { git = "https://github.com/conectado/swift-bridge.git" branch = "fix-already-declared" }
firezone-client-connlib = { path = "../../libs/client" }

[lib]
name = "connlib"
crate-type = ["staticlib"]
